day7/apps/dotnetcore/manifests/scm-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: scm-deploy 
  labels:
    application: scmcontacts
    service: scmapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmapi
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmapi
    spec:
      containers:
        - name: application
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          image: azuredevcollege.azurecr.io/adcday5/scmapi:20200302.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5000
      imagePullSecrets:
      - name: regcred
